# devops

./: example.py  pyproject.toml  requirements.txt  reusable-wf.yml
.github/workflows/: pypi.yml  stdpy.yml  stdwf.yml  wf.yml
actions/basepy/: action.yml
actions/chrome/: action.yml
actions/deptry/: action.yml
actions/ghcreds/: action.yml
actions/toxtests/: action.yml
actions/xserver/: action.yml
deptry/: action.yml
devops/: dep.py  deptry.py  deptry_mod.py  discovery.py  mapdeptry.py  mapping.json  tox.ini  toxtests.py
stdpy/: action.yml
tests/: t_example.py  tox.ini
toxlauncher/: tox.ini  toxtests.py
toxtests/: action.yml
