[project]
name = "devops"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "Launches tox tests"
readme = "readme.md"
dependencies = ['tox', 'deptry', 'click','coverage']

[tool.setuptools.packages.find]
include = ["devops*"]

[project.scripts]
tests = "devops.toxtests:main"
toxlibs = "devops.toxtests:toxlibs"
mapdeptry = "devops.mapdeptry:deptry"
cov = "devops.toxtests:cov"

[project.optional-dependencies]
test = ["holytools"]

[tool.setuptools.package-data]
"devops" = ["*"]